name:           zzgrep
version:        0.1.0.0
description:    fuzzy grep
homepage:       https://github.com/githubuser/simple#readme
bug-reports:    https://github.com/githubuser/simple/issues
author:         Martin Toman
maintainer:     whomenope@outlook.com
copyright:      2018 WhoMeNope
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md
    LICENSE

executable zzgrep
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
     ,ncurses >=0.2.16 && <0.3
  other-modules:
      Paths_zzgrep
      Contents
      Draw
      Flags
  default-language: Haskell2010
